==> ohilab/libohiboard/source/PIC24FJ/spi_PIC24FJ.c <==
#include "platforms.h"
#include "spi.h"
#include "utility.h"
#include "gpio.h"
#include "clock.h"
#include "interrupt.h"
#define SPI_DEVICE_ENABLE(REGMAP)        (REGMAP->SPICON1L |= _SPI1CON1L_SPIEN_MASK)
#define SPI_DEVICE_DISABLE(REGMAP)       (REGMAP->SPICON1L &= ~_SPI1CON1L_SPIEN_MASK)
#define SPI_DEVICE_STOP(REGMAP)         do {                                       \
                                             REGMAP->SPICON1L = 0;                 \
                                             REGMAP->SPICON1H = 0;                 \
                                             REGMAP->SPICON2L = 0;                 \
                                        } while (0)
#define SPI_ENABLE_INTERRUPTS(DEVICE)   do {                                       \
                                            Interrupt_enable(DEVICE->isrGeneral);  \
                                            Interrupt_enable(DEVICE->isrTx);       \
                                            Interrupt_enable(DEVICE->isrRx);       \
                                        } while (0)
#define SPI_DISABLE_INTERRUPTS(DEVICE)  do {                                       \
                                            Interrupt_disable(DEVICE->isrGeneral); \
                                            Interrupt_disable(DEVICE->isrTx);      \
                                            Interrupt_disable(DEVICE->isrRx);      \
                                        } while (0)

static System_Errors Spi_setSoutPin(Spi_DeviceHandle dev, Spi_SoutPins soutPin)
{
    uint8_t regIndex = soutPin / 2;
    uint8_t regPosIndex = ((soutPin % 2 ) * 8);

    UTILITY_MODIFY_REGISTER(PPS->RPOR[regIndex], (0x3F << regPosIndex),(dev->ppsSoutRegisterValue << regPosIndex));

    return ERRORS_NO_ERROR;
}

static System_Errors Spi_setSinPin(Spi_DeviceHandle dev, Spi_SinPins sinPin)
{
    UTILITY_MODIFY_REGISTER(*dev->ppsSinRegisterPtr, dev->ppsSinRegisterMask, (sinPin << dev->ppsSinRegisterPosition));

    return ERRORS_NO_ERROR;
}

static System_Errors Spi_setSckPin(Spi_DeviceHandle dev, Spi_SckPins sckPin)
{
    uint8_t regIndex = sckPin / 2;
    uint8_t regPosIndex = ((sckPin % 2 ) * 8);

    UTILITY_MODIFY_REGISTER(PPS->RPOR[regIndex], (0x3F << regPosIndex), (dev->ppsSckRegisterValue << regPosIndex));

    return ERRORS_NO_ERROR;
}

System_Errors Spi_setBaudrate (Spi_DeviceHandle dev, uint32_t speed)
{
    uint32_t peripheralClock = Clock_getOutputValue(CLOCK_OUTPUT_PERIPHERAL);

    if (peripheralClock != 0u)
    {
        uint16_t brg = (peripheralClock / (2 * speed)) - 1;
        uint16_t baudRate = (peripheralClock / (2 *(brg + 1)));
        uint32_t difference = ((uint32_t)baudRate > (uint32_t)speed)?((uint32_t)baudRate - (uint32_t)speed):((uint32_t)speed - (uint32_t)baudRate);

        if (difference < 1000000)
        {
            // The peripheral must be disabled:
            // Changing the BRG value when SPIEN = 1 causes undefined behavior
            SPI_DEVICE_DISABLE(dev->regmap);
            UTILITY_MODIFY_REGISTER(dev->regmap->SPIBRGL, _SPI1BRGL_BRG_MASK, brg);
            SPI_DEVICE_ENABLE(dev->regmap);
        }
        else
        {
            return ERRORS_SPI_BAUDRATE_NOT_FOUND;
        }
    }
    else
    {
        return ERRORS_SPI_CLOCKSOURCE_FREQUENCY_TOO_LOW;
    }
    return ERRORS_NO_ERROR;
}

static System_Errors Spi_config (Spi_DeviceHandle dev, Spi_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check all parameters with asserts
    // The OR is to detect an error: it is not important where is, the important is that there is!
    err = ohiassert(SPI_VALID_MODE(config->devType));
    err |= ohiassert(SPI_VALID_DATASIZE(config->datasize));
    err |= ohiassert(SPI_VALID_SSMANAGEMENT(config->ssManagement));
    err |= ohiassert(SPI_VALID_CPHA(config->sckPhase));
    err |= ohiassert(SPI_VALID_CPOL(config->sckPolarity));

    if (err != ERRORS_NO_ERROR)
        return ERRORS_SPI_WRONG_PARAM;

    // Save current configuration
    dev->config = *config;

    // Disable the pheripheral and reset settings
    SPI_DEVICE_STOP(dev->regmap);

    // Disable interrupts
    SPI_DISABLE_INTERRUPTS(dev);

    // Configure peripheral
    // Configure Mode
    dev->regmap->SPICON1L = dev->regmap->SPICON1L & (~(_SPI1CON1L_MSTEN_MASK));
    if (config->devType == SPI_MASTER_MODE)
    {        
        // Setup baudrate
        Spi_setBaudrate(dev,config->baudrate);
        // Clear Receive Overflow Status bit
        dev->regmap->SPISTATL &= ~_SPI1STATL_SPIROV_MASK;
        // Configure as Master
        dev->regmap->SPICON1L |= _SPI1CON1L_MSTEN_MASK;
    }
    else
    {
        // Clear Receive Overflow Status bit
        dev->regmap->SPISTATL &= ~_SPI1STATL_SPIROV_MASK;
    }

    // Configure CPOL and CPHA
    dev->regmap->SPICON1L = dev->regmap->SPICON1L & (~(_SPI1CON1L_CKE_MASK | _SPI1CON1L_CKP_MASK));
    if (config->sckPolarity == SPI_SCK_INACTIVE_STATE_HIGH)
    {
        dev->regmap->SPICON1L |= _SPI1CON1L_CKP_MASK;
    }
    if (config->sckPhase == SPI_SCK_LEADING_EDGE_DATA_CHANGED)
    {
        dev->regmap->SPICON1L |= _SPI1CON1L_CKE_MASK;
    }

    // Configure datasize
    dev->regmap->SPICON1L = dev->regmap->SPICON1L & (~(_SPI1CON1L_MODE32_MASK | _SPI1CON1L_MODE16_MASK));
    switch (config->datasize)
    {
    case SPI_DATASIZE_16BIT:
        dev->regmap->SPICON1L |= _SPI1CON1L_MODE16_MASK;
        break;
    case SPI_DATASIZE_32BIT:
        dev->regmap->SPICON1L |= _SPI1CON1L_MODE32_MASK;
        break;
    case SPI_DATASIZE_8BIT:
    default:
        break;
    }

    // Configure SS management
    dev->regmap->SPICON1H = dev->regmap->SPICON1H & (~(_SPI1CON1H_MSSEN_MASK));
    if (config->ssManagement == SPI_SSMANAGEMENT_HARDWARE)
    {
        dev->regmap->SPICON1H |= _SPI1CON1H_MSSEN_MASK;
    }

    // TODO: setup interrupt

    // Enable the pheripheral
    SPI_DEVICE_ENABLE(dev->regmap);

    return ERRORS_NO_ERROR;
}

System_Errors Spi_init (Spi_DeviceHandle dev, Spi_Config *config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the SPI device
    if (dev == NULL)
    {
        return ERRORS_SPI_NO_DEVICE;
    }
    // Check the SPI instance
    err = ohiassert(SPI_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_SPI_WRONG_DEVICE;
    }

    // Enable peripheral clock if needed
    if (dev->state == SPI_DEVICESTATE_RESET)
    {
        // Enable peripheral
        UTILITY_CLEAR_REGISTER_BIT(*dev->pmdRegisterPtr, dev->pmdRegisterEnable);

        // unlock PPS
        __builtin_write_OSCCONL(OSCCON & 0xbf);

        // Enable pins
        if (config->sinPin != SPI_PINS_SINNONE)
            Spi_setSinPin(dev, config->sinPin);

        if (config->soutPin != SPI_PINS_SOUTNONE)
            Spi_setSoutPin(dev, config->soutPin);

        if (config->sckPin != SPI_PINS_SCKNONE)
            Spi_setSckPin(dev, config->sckPin);

#if 0
        if ((config->pcs0Pin != SPI_PINS_PCSNONE) && (config->ssManagement != SPI_SSMANAGEMENT_SOFTWARE))
            Spi_setNssPin(dev, config->pcs0Pin);
#endif

        // lock   PPS
        __builtin_write_OSCCONL(OSCCON | 0x40);  
    }
    dev->state = SPI_DEVICESTATE_BUSY;

    // Configure the peripheral
    err = Spi_config(dev,config);
    if (err != ERRORS_NO_ERROR)
    {
        // FIXME: Call deInit?
        dev->state = SPI_DEVICESTATE_ERROR;
        return err;
    }

    dev->state = SPI_DEVICESTATE_READY;

    return ERRORS_NO_ERROR;
}

System_Errors Spi_read (Spi_DeviceHandle dev, uint8_t* data, uint32_t timeout)
{
    System_Errors err = ERRORS_NO_ERROR;
    dev->state = SPI_DEVICESTATE_BUSY;

    switch(dev->config.datasize)
    {
        default:
        case SPI_DATASIZE_8BIT:
        {
            const uint8_t txData = 0;
            err = spi_exchange8bit(dev, &txData, data, timeout);
        }
        break;

        case SPI_DATASIZE_16BIT:
        {
            const uint16_t txData = 0;
            err = spi_exchange16bit(dev, &txData, (uint16_t*)data, timeout);
        }
        break;

        case SPI_DATASIZE_32BIT:
        {

        }
        break;
    }

    dev->state = SPI_DEVICESTATE_READY;
    return err;
}

System_Errors Spi_write (Spi_DeviceHandle dev, const uint8_t* data, uint32_t timeout)
{
    System_Errors err = ERRORS_NO_ERROR;
    dev->state = SPI_DEVICESTATE_BUSY;

    switch(dev->config.datasize)
    {
        default:
        case SPI_DATASIZE_8BIT:
        {
            uint8_t rxData = 0;
            err = spi_exchange8bit(dev, data, &rxData, timeout);
        }
        break;

        case SPI_DATASIZE_16BIT:
        {
            uint16_t rxData = 0;
            err = spi_exchange16bit(dev, (uint16_t*)data, &rxData, timeout);
        }
        break;

        case SPI_DATASIZE_32BIT:
        {

        }
        break;
    }

    dev->state = SPI_DEVICESTATE_READY;
    return err;
}
