==> ohilab/libohiboard/source/STM32L0/spi_STM32L0.c <==
#include "spi.h"
#include "platforms.h"
#include "utility.h"
#include "gpio.h"
#include "clock.h"
#include "interrupt.h"
#define SPI_DEVICE_ENABLE(REGMAP)        (REGMAP->CR1 |= SPI_CR1_SPE)
#define SPI_DEVICE_DISABLE(REGMAP)       (REGMAP->CR1 &= ~SPI_CR1_SPE)
#define SPI_CLOCK_ENABLE(REG,MASK)       do { \
                                           UTILITY_SET_REGISTER_BIT(REG,MASK); \
                                           asm("nop"); \
                                           (void) UTILITY_READ_REGISTER_BIT(REG,MASK); \
                                         } while (0)
#define SPI_VALID_CPOL(CPOL) (((CPOL) == SPI_SCK_INACTIVE_STATE_LOW) || \
                              ((CPOL) == SPI_SCK_INACTIVE_STATE_HIGH))
#define SPI_VALID_CPHA(CPHA) (((CPHA) == SPI_SCK_LEADING_EDGE_DATA_CAPTURED) || \
                              ((CPHA) == SPI_SCK_LEADING_EDGE_DATA_CHANGED))
#define SPI_VALID_MODE(MODE) (((MODE) == SPI_MASTER_MODE) || \
                              ((MODE) == SPI_SLAVE_MODE))
#define SPI_VALID_DIRECTION(DIRECTION) (((DIRECTION) == SPI_DIRECTION_FULL_DUPLEX) || \
                                        ((DIRECTION) == SPI_DIRECTION_HALF_DUPLEX) || \
                                        ((DIRECTION) == SPI_DIRECTION_RX_ONLY))
#define SPI_VALID_TX_DIRECTION(DIRECTION) (((DIRECTION) == SPI_DIRECTION_FULL_DUPLEX) || \
                                           ((DIRECTION) == SPI_DIRECTION_HALF_DUPLEX))

static System_Errors Spi_setSoutPin(Spi_DeviceHandle dev, Spi_SoutPins soutPin)
{
    uint8_t devPinIndex;

//    if (dev->devInitialized == 0)
//        return ERRORS_SPI_DEVICE_NOT_INIT;

    for (devPinIndex = 0; devPinIndex < SPI_MAX_PINS; ++devPinIndex)
    {
        if (dev->soutPins[devPinIndex] == soutPin)
        {
            Gpio_configAlternate(dev->soutPinsGpio[devPinIndex],
                                 dev->soutPinsMux[devPinIndex],
                                 GPIO_PINS_SPEED_HIGH); // Workaround: Errata STM32L073x8/B/Z, page 17
            return ERRORS_NO_ERROR;
        }
    }
    return ERRORS_SPI_NO_PIN_FOUND;
}

static System_Errors Spi_setSinPin(Spi_DeviceHandle dev, Spi_SinPins sinPin)
{
    uint8_t devPinIndex;

//    if (dev->devInitialized == 0)
//        return ERRORS_SPI_DEVICE_NOT_INIT;

    for (devPinIndex = 0; devPinIndex < SPI_MAX_PINS; ++devPinIndex)
    {
        if (dev->sinPins[devPinIndex] == sinPin)
        {
            Gpio_configAlternate(dev->sinPinsGpio[devPinIndex],
                                 dev->sinPinsMux[devPinIndex],
                                 GPIO_PINS_SPEED_HIGH); // Workaround: Errata STM32L073x8/B/Z, page 17
            return ERRORS_NO_ERROR;
        }
    }
    return ERRORS_SPI_NO_PIN_FOUND;
}

static System_Errors Spi_setSckPin(Spi_DeviceHandle dev, Spi_SckPins sckPin)
{
    uint8_t devPinIndex;

//    if (dev->devInitialized == 0)
//        return ERRORS_SPI_DEVICE_NOT_INIT;

    for (devPinIndex = 0; devPinIndex < SPI_MAX_PINS; ++devPinIndex)
    {
        if (dev->sckPins[devPinIndex] == sckPin)
        {
            Gpio_configAlternate(dev->sckPinsGpio[devPinIndex],
                                 dev->sckPinsMux[devPinIndex],
                                 GPIO_PINS_SPEED_HIGH); // Workaround: Errata STM32L073x8/B/Z, page 17
            return ERRORS_NO_ERROR;
        }
    }
    return ERRORS_SPI_NO_PIN_FOUND;
}

System_Errors Spi_setBaudrate (Spi_DeviceHandle dev, uint32_t speed)
{
    uint32_t frequency = 0u;
    uint32_t computeSpeed = 0u;
    uint32_t diff = 0xFFFFFFFFu;
    uint8_t br = 0u;

    if (dev == OB_SPI1)
        frequency = Clock_getOutputValue(CLOCK_OUTPUT_PCLK2);
    else
        frequency = Clock_getOutputValue(CLOCK_OUTPUT_PCLK1);

    if (frequency != 0u)
    {
        for (uint8_t i = 0; i < 8; i++)
        {
            computeSpeed = (frequency / Spi_brDiv[i]);
            if (speed < computeSpeed)
            {
                if ((computeSpeed - speed) < diff)
                {
                    diff = computeSpeed - speed;
                    br = i;
                }
            }
            else
            {
                if ((speed - computeSpeed) < diff)
                {
                    diff = speed - computeSpeed;
                    br = i;
                }
            }
        }

        if (diff == 0xFFFFFFFFu)
            return ERRORS_SPI_BAUDRATE_NOT_FOUND;

        dev->regmap->CR1 = dev->regmap->CR1 & (~(SPI_CR1_BR));
        dev->regmap->CR1 |= (br << SPI_CR1_BR_Pos);
    }
    else
    {
        return ERRORS_SPI_CLOCKSOURCE_FREQUENCY_TOO_LOW;
    }

    return ERRORS_NO_ERROR;
}

static System_Errors Spi_config (Spi_DeviceHandle dev, Spi_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check all parameters with asserts
    // The OR is to detect an error: it is not important where is, the important is that there is!
    err = ohiassert(SPI_VALID_MODE(config->devType));
    err |= ohiassert(SPI_VALID_DIRECTION(config->direction));
    err |= ohiassert(SPI_VALID_DATASIZE(config->datasize));
    err |= ohiassert(SPI_VALID_SSMANAGEMENT(config->ssManagement));
    err |= ohiassert(SPI_VALID_FIRST_BIT(config->firstBit));
    err |= ohiassert(SPI_VALID_FRAME_FORMAT(config->frameFormat));

    // In TI format, no CPOL e CPHA check
    if (config->frameFormat == SPI_FRAMEFORMAT_MOTOROLA)
    {
        err |= ohiassert(SPI_VALID_CPHA(config->sckPhase));
        err |= ohiassert(SPI_VALID_CPOL(config->sckPolarity));
    }

    if (err != ERRORS_NO_ERROR)
        return ERRORS_SPI_WRONG_PARAM;

    // Save current configuration
    dev->config = *config;

    // Disable the peripheral
    SPI_DEVICE_DISABLE(dev->regmap);

    // Configure peripheral
    // Configure Mode
    dev->regmap->CR1 = dev->regmap->CR1 & (~(SPI_CR1_MSTR | SPI_CR1_SSI));
    if (config->devType == SPI_MASTER_MODE)
    {
        dev->regmap->CR1 |= SPI_CR1_MSTR | SPI_CR1_SSI;
    }

    // Configure direction
    dev->regmap->CR1 = dev->regmap->CR1 & (~(SPI_CR1_BIDIMODE | SPI_CR1_RXONLY | SPI_CR1_BIDIOE));
    switch (config->direction)
    {
    case SPI_DIRECTION_FULL_DUPLEX:
        // Nothing to do!
        break;

    case SPI_DIRECTION_HALF_DUPLEX:
        dev->regmap->CR1 |= SPI_CR1_BIDIMODE;
        break;

    case SPI_DIRECTION_RX_ONLY:
        dev->regmap->CR1 |= SPI_CR1_RXONLY;
        break;
    }

    // Configure First Bit type
    dev->regmap->CR1 = dev->regmap->CR1 & (~(SPI_CR1_LSBFIRST));
    if (config->firstBit == SPI_FIRSTBIT_LSB)
    {
        dev->regmap->CR1 |= SPI_CR1_LSBFIRST;
    }

    // Configure CPOL and CPHA
    dev->regmap->CR1 = dev->regmap->CR1 & (~(SPI_CR1_CPOL | SPI_CR1_CPHA));
    if (config->sckPolarity == SPI_SCK_INACTIVE_STATE_HIGH)
    {
        dev->regmap->CR1 |= SPI_CR1_CPOL;
    }
    if (config->sckPhase == SPI_SCK_LEADING_EDGE_DATA_CHANGED)
    {
        dev->regmap->CR1 |= SPI_CR1_CPHA;
    }

    // Configure datasize
    dev->regmap->CR1 = dev->regmap->CR1 & (~(SPI_CR1_DFF));
    dev->regmap->CR1 |= ((config->datasize == SPI_DATASIZE_16BIT) ? SPI_CR1_DFF : 0x00000000u);

    // Configure Frame Format Type (Motorola or TI)
    dev->regmap->CR2 = dev->regmap->CR2 & (~(SPI_CR2_FRF));
    if (config->frameFormat == SPI_FRAMEFORMAT_TI)
    {
        dev->regmap->CR2 |= SPI_CR2_FRF;
    }

    // Configure SS management
    dev->regmap->CR1 = dev->regmap->CR1 & (~(SPI_CR1_SSM));
    dev->regmap->CR2 = dev->regmap->CR2 & (~(SPI_CR2_SSOE));
    switch (config->ssManagement)
    {
    case SPI_SSMANAGEMENT_SOFTWARE:
        dev->regmap->CR1 |= SPI_CR1_SSM;
        break;
    case SPI_SSMANAGEMENT_HARDWARE_INPUT:
        // Nothing to do!
        break;
    case SPI_SSMANAGEMENT_HARDWARE_OUTPUT:
        dev->regmap->CR2 |= SPI_CR2_SSOE;
        break;
    }

    // Set baudrate
    err = Spi_setBaudrate(dev,config->baudrate);
    if (err != ERRORS_NO_ERROR)
    {
        return err;
    }

    // Activate the SPI mode: this bit must be cleared!
    UTILITY_CLEAR_REGISTER_BIT(dev->regmap->I2SCFGR, SPI_I2SCFGR_I2SMOD);

    // The device will be enable only during transmission...
    // When the device was enable, the SS pin is set low automatically.
    // SPI_DEVICE_ENABLE(dev->regmap);

    return ERRORS_NO_ERROR;
}

System_Errors Spi_init (Spi_DeviceHandle dev, Spi_Config *config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the SPI device
    if (dev == NULL)
    {
        return ERRORS_SPI_NO_DEVICE;
    }
    // Check the SPI instance
    err = ohiassert(SPI_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_SPI_WRONG_DEVICE;
    }

    // Enable peripheral clock if needed
    if (dev->state == SPI_DEVICESTATE_RESET)
    {
        // Enable peripheral clock
        SPI_CLOCK_ENABLE(*dev->rccRegisterPtr,dev->rccRegisterEnable);

        // Enable pins
        if (config->sinPin != SPI_PINS_SINNONE)
            Spi_setSinPin(dev, config->sinPin);

        if (config->soutPin != SPI_PINS_SOUTNONE)
            Spi_setSoutPin(dev, config->soutPin);

        if (config->sckPin != SPI_PINS_SCKNONE)
            Spi_setSckPin(dev, config->sckPin);

        if ((config->pcs0Pin != SPI_PINS_PCSNONE) && (config->ssManagement != SPI_SSMANAGEMENT_SOFTWARE))
            Spi_setNssPin(dev, config->pcs0Pin);
    }
    dev->state = SPI_DEVICESTATE_BUSY;

    // Configure the peripheral
    err = Spi_config(dev,config);
    if (err != ERRORS_NO_ERROR)
    {
        // FIXME: Call deInit?
        dev->state = SPI_DEVICESTATE_ERROR;
        return err;
    }

    dev->state = SPI_DEVICESTATE_READY;

    return ERRORS_NO_ERROR;
}

System_Errors Spi_read (Spi_DeviceHandle dev, uint8_t* data, uint32_t timeout)
{
    System_Errors err = ERRORS_NO_ERROR;

    if (dev->config.datasize == SPI_DATASIZE_16BIT)
    {
        err |= ohiassert(SPI_VALID_16BIT_ALIGNED(data));
    }
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_SPI_WRONG_PARAM;
    }

    if (dev->state != SPI_DEVICESTATE_READY)
    {
        err = ERRORS_SPI_DEVICE_BUSY;
        dev->state = SPI_DEVICESTATE_ERROR;
        // Release the device.
        goto spierror;
    }
    dev->state = SPI_DEVICESTATE_BUSY;

    // If one line transmission, setup the device
    if (dev->config.direction == SPI_DIRECTION_HALF_DUPLEX)
    {
        UTILITY_CLEAR_REGISTER_BIT(dev->regmap->CR1,SPI_CR1_BIDIOE);
    }

    // Check if the device is enabled
    if (UTILITY_READ_REGISTER_BIT(dev->regmap->CR1,SPI_CR1_SPE) == 0)
    {
        SPI_DEVICE_ENABLE(dev->regmap);
    }

    // Save timeout
    uint32_t timeoutEnd = System_currentTick() + timeout;
    // Check the connection type
    if ((dev->config.devType == SPI_MASTER_MODE) && (dev->config.direction == SPI_DIRECTION_FULL_DUPLEX))
    {
        // Send dummy data
        // Wait until the buffer is empty
        while (UTILITY_READ_REGISTER_BIT(dev->regmap->SR,SPI_SR_TXE) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                err = ERRORS_SPI_TIMEOUT_TX;
                // Release the device.
                goto spierror;
            }
        }

        // In case of datasize is grater the 8B cast the relative value
        if (dev->config.datasize > SPI_DATASIZE_8BIT)
        {
            *((volatile uint16_t *)&dev->regmap->DR) = SPI_EMPTY_WORD;
        }
        else
        {
            *((volatile uint8_t *)&dev->regmap->DR) = SPI_EMPTY_BYTE;
        }

        // Now read the data
        // Wait until the buffer is not empty
        while (UTILITY_READ_REGISTER_BIT(dev->regmap->SR,SPI_SR_RXNE) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                err = ERRORS_SPI_TIMEOUT_RX;
                // Release the device.
                goto spierror;
            }
        }

        // In case of datasize is grater the 8B cast the relative value
        if (dev->config.datasize > SPI_DATASIZE_8BIT)
        {
            *((uint16_t *)data) = *((volatile uint16_t *)&dev->regmap->DR);
        }
        else
        {
            *((uint8_t *)data) = *((volatile uint8_t *)&dev->regmap->DR);
        }
    }
    else
    {
        // Wait until the buffer is not empty
        while (UTILITY_READ_REGISTER_BIT(dev->regmap->SR,SPI_SR_RXNE) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                err = ERRORS_SPI_TIMEOUT_RX;
                // Release the device.
                goto spierror;
            }
        }

        // In case of datasize is grater the 8B cast the relative value
        if (dev->config.datasize > SPI_DATASIZE_8BIT)
        {
            *((uint16_t *)data) = *((volatile uint16_t *)&dev->regmap->DR);
        }
        else
        {
            *((uint8_t *)data) = *((volatile uint8_t *)&dev->regmap->DR);
        }
    }

spierror:
    // FIXME: Disable SPI?
    if (err == ERRORS_NO_ERROR)
        dev->state = SPI_DEVICESTATE_READY;
    else
        dev->state = SPI_DEVICESTATE_ERROR;
    return err;
}

System_Errors Spi_write (Spi_DeviceHandle dev, const uint8_t* data, uint32_t timeout)
{
    System_Errors err = ERRORS_NO_ERROR;

    // Check the chosen direction for the peripheral
    err = ohiassert(SPI_VALID_TX_DIRECTION(dev->config.direction));
    if (dev->config.datasize == SPI_DATASIZE_16BIT)
    {
        err |= ohiassert(SPI_VALID_16BIT_ALIGNED(data));
    }
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_SPI_WRONG_PARAM;
    }

    if (dev->state != SPI_DEVICESTATE_READY)
    {
        err = ERRORS_SPI_DEVICE_BUSY;
        dev->state = SPI_DEVICESTATE_ERROR;
        // Release the device.
        goto spierror;
    }
    dev->state = SPI_DEVICESTATE_BUSY;

    // Save timeout
    uint32_t timeoutEnd = System_currentTick() + timeout;

    // If one line transmission, setup the device
    if (dev->config.direction == SPI_DIRECTION_HALF_DUPLEX)
    {
        UTILITY_SET_REGISTER_BIT(dev->regmap->CR1,SPI_CR1_BIDIOE);
    }

    // Check if the device is enabled
    if (UTILITY_READ_REGISTER_BIT(dev->regmap->CR1,SPI_CR1_SPE) == 0)
    {
        SPI_DEVICE_ENABLE(dev->regmap);
    }

    // In case of datasize is grater the 8B cast the relative value
    if (dev->config.datasize > SPI_DATASIZE_8BIT)
    {
        if (dev->config.devType == SPI_SLAVE_MODE)
        {
            *((volatile uint16_t *)&dev->regmap->DR) = *((uint16_t *)data);
        }

        // Wait until the buffer is empty
        while (UTILITY_READ_REGISTER_BIT(dev->regmap->SR,SPI_SR_TXE) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                err = ERRORS_SPI_TIMEOUT_TX;
                // Release the device.
                goto spierror;
            }
        }

        *((volatile uint16_t *)&dev->regmap->DR) = *((uint16_t *)data);
    }
    else
    {
        if (dev->config.devType == SPI_SLAVE_MODE)
        {
            *((volatile uint8_t *)&dev->regmap->DR) = *((uint8_t *)data);
        }

        // Wait until the buffer is empty
        while (UTILITY_READ_REGISTER_BIT(dev->regmap->SR,SPI_SR_TXE) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                err = ERRORS_SPI_TIMEOUT_TX;
                // Release the device.
                goto spierror;
            }
        }

        *((volatile uint8_t *)&dev->regmap->DR) = *((uint8_t *)data);
    }

    // In case of full-duplex transmission, wait until RXNE flag is set
    if (dev->config.direction == SPI_DIRECTION_FULL_DUPLEX)
    {
        uint16_t dummy = 0;

        while (UTILITY_READ_REGISTER_BIT(dev->regmap->SR,SPI_SR_RXNE) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                err = ERRORS_SPI_TIMEOUT_TX;
                // Release the device.
                goto spierror;
            }
        }

        // Read dummy element from RX FIFO
        if (dev->config.datasize > SPI_DATASIZE_8BIT)
        {
            *((uint16_t *)&dummy) = *((volatile uint16_t *)&dev->regmap->DR);
        }
        else
        {
            *((uint8_t *)&dummy) = *((volatile uint8_t *)&dev->regmap->DR);
        }
    }

    if (UTILITY_READ_REGISTER_BIT(dev->regmap->SR,SPI_SR_OVR))
    {
        // Clear overrun flag in two lines direction mode
        // The received data is not read
        if (dev->config.direction == SPI_DIRECTION_FULL_DUPLEX)
        {
            (void) dev->regmap->DR;
            (void) dev->regmap->SR;
        }
    }

spierror:
    // FIXME: Disable SPI?
    if (err == ERRORS_NO_ERROR)
        dev->state = SPI_DEVICESTATE_READY;
    else
        dev->state = SPI_DEVICESTATE_ERROR;
    return err;
}
